--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,35 +1,35 @@
-name: Build Windows EXE
+# name: Build Windows EXE
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: windows-latest
+# jobs:
+#   build:
+#     runs-on: windows-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.29.3' # غيرها حسب نسخة الفلاتر اللي بتستعملها
+#       - name: Setup Flutter
+#         uses: subosito/flutter-action@v2
+#         with:
+#           flutter-version: '3.29.3' 
 
-      - name: Enable Windows desktop
-        run: flutter config --enable-windows-desktop
+#       - name: Enable Windows desktop
+#         run: flutter config --enable-windows-desktop
 
-      - name: Get dependencies
-        run: flutter pub get
+#       - name: Get dependencies
+#         run: flutter pub get
 
-      - name: Build Windows exe
-        run: flutter build windows --release
+#       - name: Build Windows exe
+#         run: flutter build windows --release
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-exe
-          path: build/windows/x64/runner/Release/
+#       - name: Upload artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: windows-exe
+#           path: build/windows/x64/runner/Release/
