--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
+  date_field: ^6.0.3+1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
@@ -41,7 +42,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
   intl: ^0.19.0
+  path: ^1.9.1
   sidebarx: ^0.17.2
+  sqflite_common_ffi: ^2.3.6
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
