--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.17
+  flutter_typeahead: ^5.2.0
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
   intl: ^0.19.0
