--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   get_it: ^8.0.3
   intl: ^0.19.0
   path: ^1.9.1
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
+  printing: ^5.14.2
   sidebarx: ^0.17.2
   sqflite_common_ffi: ^2.3.6
 dev_dependencies:
