--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.4.1
+  cloud_firestore: ^6.1.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   date_field: ^6.0.3+1
+  firebase_core: ^4.2.1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
