--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   date_field: ^6.0.3+1
+  firebase_auth: ^6.1.2
   firebase_core: ^4.2.1
   flutter:
     sdk: flutter
