--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.5
   pdf: ^3.11.3
   printing: ^5.14.2
+  shared_preferences: ^2.5.3
   sidebarx: ^0.17.2
   sqflite_common_ffi: ^2.3.6
 dev_dependencies:
