--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,9 @@ dependencies:
   printing: ^5.14.2
   shared_preferences: ^2.5.3
   sidebarx: ^0.17.2
+  sliver_tools: ^0.2.12
   sqflite_common_ffi: ^2.3.6
+  window_manager: ^0.5.1
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
