--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
   intl: ^0.19.0
+  mailer: ^6.6.0
   path: ^1.9.1
   path_provider: ^2.1.5
   pdf: ^3.11.3
