--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   date_field: ^6.0.3+1
+  excel: ^4.0.6
   firebase_auth: ^6.1.2
   firebase_core: ^4.2.1
   flutter:
@@ -47,6 +48,7 @@ dependencies:
   get_it: ^8.0.3
   intl: ^0.19.0
   mailer: ^6.6.0
+  open_filex: ^4.7.0
   path: ^1.9.1
   path_provider: ^2.1.5
   pdf: ^3.11.3
